[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
mktemp = "0.5.0"
predicates = "3.0.3"
